miniflux/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: miniflux
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
