miniflux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
      - name: miniflux
        image: miniflux/miniflux:latest
        command: ["/usr/bin/miniflux"]
        ports:
        - containerPort: 8080
      securityContext:
        runAsUser: 65534  # nobody
