miniflux/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        command: ["postgres"]
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: "/var/lib/postgresql/data"
      volumes:
      - name: postgres-storage
        nfs:
          server: 10.60.1.15
          path: "/data/services/miniflux-postgres"
