miniflux/miniflux-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: miniflux
spec:
  type: LoadBalancer
  selector:
    app: miniflux
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
